# IES-Project

./: COACH_SENSORS.tsx  README.md  TODO.md
docs/: .presentation.md.swp  presentation.md  pull_request_template.md
docs/resources/: DocusaurusDoc.md  minute_template.md  pull_request_template.md
docs/resources/architecture/: architecture.0.0.1.drawio
docs/smart-training-system-documentation/: .docusaurus.config.ts.swp  docusaurus.config.ts  package-lock.json  package.json
docs/smart-training-system-documentation/docs/: github_workflow.md  information_perspetive.md  introduction.md  project-overview.md  team.md
docs/smart-training-system-documentation/docs/architecture/: architecture.md  architecture_diagram.md
docs/smart-training-system-documentation/docs/architecture-notebook/: architecture-diagram.md  architecture-notebook.md  requirements_and_constrains .md  tech_stack.md
src/: .env  comp.yml  compose.yml
src/backend/: Dockerfile
src/backend/core-app/: .env  Dockerfile  docker-compose.yml  pom.xml
src/backend/kafka-connectors/: elasticsearch-sink.json
src/backend/restapi/: pom.xml
src/data-generation/: README.md  consumed_messages.txt  consumer.py  docker-compose.yml  plotGraphs.py  producer.py  pyproject.toml
src/data-generation/data_generation/: producer.py
src/database/: Dockerfile
src/frontend/: Dockerfile  package-lock.json
src/frontend/react-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/nginx/conf.d/: default.conf
src/vm/: .env  compose.txt  compose.yml  compose_secrets.txt  setup.sh
(+325 files in other folders)
